--- a/PJ1.AuthService.WebApi/PJ1.AuthService.WebApi.csproj
+++ b/PJ1.AuthService.WebApi/PJ1.AuthService.WebApi.csproj
@@ -6,18 +6,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityModel" Version="6.0.0" />
-    <PackageReference Include="IdentityServer4" Version="4.1.2" />
-    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2" />
-    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="IdentityModel" Version="6.0.0"/>
+    <PackageReference Include="IdentityServer4" Version="4.1.2"/>
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.1.2"/>
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.2"/>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1"/>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1"/>
 
   </ItemGroup>
 
@@ -25,6 +25,16 @@
     <ProjectReference Include="..\PJ1.AuthService.Data\PJ1.AuthService.Data.csproj"/>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+  <ItemGroup>
+    <Content Include="..\.gitignore">
+      <Link>.gitignore</Link>
+    </Content>
+  </ItemGroup>
+
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties appsettings_1json__JsonSchema=""/>
+    </VisualStudio>
+  </ProjectExtensions>
 
 </Project>
